--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 fastapi
-uvicorn
+uvicorn[standard]
+
 pdfplumber
+pymupdf
+
 sentence-transformers
 faiss-cpu
-pymupdf
+
 opencv-python
 pillow
-openai
 numpy
+
+openai
 python-multipart
